<resources>
    <string name="app_name">Todyapp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appName">Todyapp</string>
    <string name="slogan">The best to do list application for you</string>
    <string name="today">Today</string>
    <string name="best_platform_for_creating_to_do_lists">Best platform for creating to-do lists</string>
    <string name="add_new_task">Add new task</string>
    <string name="save_action">Save</string>
    <string name="enter_your_task">Enter your task</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="todo">TODO</string>
    <string name="new_task">New task</string>
</resources>